# rust-fullstack

backend/: Cargo.toml
backend/src/: app.rs  di.rs  error.rs  main.rs  user.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
