[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
axum = "0.5"
axum-macros = "0.2.3"
tower = "0.4"
tokio = { version = "1.21", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
common = { path = "../common" }
shaku = "0.6"
shaku_axum = "0.3"
async-trait = "0.1"
